<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.50"
                android:elevation="20dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_namepok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/detailpokemon_txt_elementone" />

                <TextView
                    android:id="@+id/txt_hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_namepok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_namepok"
                    tools:text="@string/detailpokemon_txt_elementtwo" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    app:cardCornerRadius="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="@+id/txt_hp"
                    app:layout_constraintStart_toStartOf="@+id/txt_namepok"
                    app:layout_constraintTop_toBottomOf="@+id/txt_namepok">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_card"
                            android:layout_width="0dp"
                            android:layout_height="400dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/charizard" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="15dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="@+id/cardView11"
                    app:layout_constraintStart_toStartOf="@+id/cardView11"
                    app:layout_constraintTop_toBottomOf="@+id/cardView11">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:alpha="0.5"
                            android:background="@color/grey_10"
                            android:elevation="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/txt_elementfive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="@+id/txt_elementwo"
                            app:layout_constraintTop_toBottomOf="@+id/txt_elementwo"
                            tools:text="@string/detailpokemon_txt_elementfive" />

                        <TextView
                            android:id="@+id/txt_elementhree"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/txt_elementone"
                            app:layout_constraintTop_toBottomOf="@+id/txt_elementone"
                            tools:text="@string/detailpokemon_txt_elementthree" />

                        <TextView
                            android:id="@+id/txt_elementone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/detailpokemon_txt_elementone" />

                        <TextView
                            android:id="@+id/txt_elementfour"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_elementhree"
                            app:layout_constraintStart_toEndOf="@+id/txt_elementhree"
                            app:layout_constraintTop_toTopOf="@+id/txt_elementhree"
                            tools:text="@string/detailpokemon_txt_elementfour" />

                        <TextView
                            android:id="@+id/txt_elementsix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_elementfive"
                            app:layout_constraintEnd_toStartOf="@+id/txt_elementfive"
                            app:layout_constraintTop_toTopOf="@+id/txt_elementfive"
                            tools:text="@string/detailpokemon_txt_elementsix" />

                        <TextView
                            android:id="@+id/txt_elementwo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/deep_orange_500"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/txt_elementone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/txt_elementone"
                            tools:text="@string/detailpokemon_txt_elementtwo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txt_textdescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/cardView12"
                    app:layout_constraintTop_toBottomOf="@+id/cardView12"
                    tools:text="@string/detailpokemon_txt_textdescription" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:justificationMode="inter_word"
                    android:textColor="@color/grey_20"
                    app:layout_constraintEnd_toEndOf="@+id/cardView12"
                    app:layout_constraintStart_toStartOf="@+id/txt_textdescription"
                    app:layout_constraintTop_toBottomOf="@+id/txt_textdescription"
                    tools:text="@string/detailpokemon_txt_description" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_withoutinternet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_content"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/error_message" />

                <TextView
                    android:id="@+id/txt_texterror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/error_internet_txt_error"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_error" />

                <TextView
                    android:id="@+id/txt_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/error_internet_connection"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_texterror"
                    app:layout_constraintStart_toStartOf="@+id/txt_texterror"
                    app:layout_constraintTop_toBottomOf="@+id/txt_texterror" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>




    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>